<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
<group android:checkableBehavior="single" android:id="@+id/menucolorsetting">
    <item
        android:id="@+id/menu_red"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/red_string" />
    <item
        android:id="@+id/menu_blue"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/blue_string" />
    <item
        android:id="@+id/menu_green"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/green_string" />

</group>
<!-- "Mark Favorite", should appear as action button if possible -->
<item
    android:id="@+id/action_favorite"
    android:icon="@drawable/ic_favorite_black_48dp"
    android:title="@string/action_favorite"
    android:showAsAction="ifRoom"/>

<!-- Settings, should always be in the overflow -->
<item android:id="@+id/action_settings"
    android:title="@string/action_settings"
    android:showAsAction="never"/>

</menu>